syntax = "proto3";
import "src/proto/commons.proto";

package ferrum_refinery.proto;


service ForemanService {
  rpc SendHeartBeat(HeartbeatRequest) returns (HeartBeatResponse) {}
  rpc RegisterWithForeman(RegistrationRequest) returns (RegistrationResponse) {}
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse) {}
}

message RegistrationRequest {
  string worker_id = 1;
  string worker_hostname = 2;
  uint32 worker_port = 3;
}

message RegistrationResponse {
  bool success = 1;
}

message HeartbeatRequest {
  string worker_id = 1;
  HealthMetrics health_metrics = 2;
  WorkerStatus status = 3;

}

enum WorkerStatus {
  Idle = 0;
  Busy = 1;
}

message HeartBeatResponse {
  bool success = 1;
}

message CreateJobRequest {
  string input_data = 1;
  string output_data = 2;
}

message CreateJobResponse {
  bool success = 1;
  optional string job_id = 2;
}


